tests/valid/StaticVar_Valid_5.whiley
type nat is (int x) where x >= 0

nat[] x = [1,2,3]

public export method test():
    assume x == [1,2,3]
