tests/invalid/Array_Invalid_3.whiley
public export method test() :
    int[] a2 = [1, 2, 3]
    int y = a2[x]
